# undemaorientez.eu

./: .pre-commit-config.yaml  CLAUDE.md  CNAME  Readme.md  index.html  manage.py  pyproject.toml
oscraper/: asgi.py  settings.py  urls.py  wsgi.py
oscraper/cms/: apps.py  models.py  wagtail_hooks.py
oscraper/cms/management/commands/: import_events.py
oscraper/cms/migrations/: 0001_initial.py  0002_create_homepage.py  0003_event.py  0004_newsletter.py
oscraper/cms/templates/cms/: base.html  event.html  event_newsletter_email.html  home_page.html
oscraper/cms/tests/: test_import_events.py
oscraper/scraper/: apps.py  extract.py  repo.py
oscraper/scraper/management/commands/: extract_events.py  fetch_events.py  generate_feed.py
oscraper/scraper/templates/scraper/: feed.xml
oscraper/scraper/tests/: conftest.py  test_extract.py  test_fetch.py  test_repo.py
oscraper/scraper/tests/data/: extract_result.json  scraped_example.html
