[project]
name = "oscraper"
version = "0.0.0"
description = "A tool that scrapes orienteering.ro for events"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "Django==5.2",
    "html5lib>=1.1",
    "requests",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "oscraper.settings"
