[project]
name = "oscraper"
version = "0.0.0"
description = "A tool that scrapes orienteering.ro for events"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "Django==5.2,<5.3",
    "html5lib>=1.1",
    "requests",
    "wagtail>=7.0.1,<7.1",
    "wagtail-newsletter[mailchimp,mrml]>=0.2.2",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "oscraper.settings"
log_cli_level = "DEBUG"
